fix alignment, closes #682
Closes #682

Merge request studip/studip!1265

--- a/resources/assets/stylesheets/less/forms.less
+++ b/resources/assets/stylesheets/less/forms.less
@@ -7,6 +7,7 @@ form.default {
 
     div.select2-wrapper {
         display: block ! important;
+        text-indent: 0;
     }
 
     section {
